# aind-mri-utils

./: .copier-answers.yml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bump-call.yml  ci-call.yml  publish-call.yml  tag_and_publish.yml  test_and_lint.yml
doc_template/source/: conf.py  index.rst
scripts/: run_linters_and_checks.sh
src/aind_mri_utils/: __init__.py  aliases.py  arc_angles.py  chemical_shift.py  coordinate_systems.py  headframe_rotation.py  implant.py  ipython.html  manual_keypoints.py  measurement.py  meshes.py  obj_plots.py  optimization.py  planning.py  plots.py  reticle_calibrations.py  rotations.py  sitk_transforms.py  sitk_volume.py  slicer_utils.py  utils.py
src/aind_mri_utils/file_io/: __init__.py  image_files.py  masks.py  neuroglancer.py  obj_files.py  simpleitk.py  slicer_files.py
test-data/reticle/: calibration_info_np2_2025_03_11T13_42_00.xlsx
tests/: coordinate_systems_test.py  test_arc_angles.py  test_coordinate_systems.py  test_file_io_obj_files.py  test_file_io_simpleitk.py  test_file_io_slicer_files.py  test_headframe_rotation.py  test_manual_keypoints.py  test_measurments.py  test_message_handler.py  test_obj_plots.py  test_optimization.py  test_plots.py  test_reticle_calibrations.py  test_rotations.py  test_sitk.py  test_utils.py
