[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aind-mri-utils"
description = "MRI utilities library for aind teams."
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Galen Lynch", email = "galen@galenlynch.com" },
  { name = "Yoni Browning", email = "yoni.browning@alleninstitute.org" },
  { name = "Allen Institute for Neural Dynamics" },
]
classifiers = ["Programming Language :: Python :: 3"]
readme = "README.md"
version = "0.12.1"

dependencies = [
  'aind-anatomical-utils >= 0.1, < 0.5',
  'matplotlib >= 3, < 4',
  'numpy >= 1.7, < 3',
  'openpyxl >= 3, < 4',
  'pywavefront >= 1.3, < 2',
  'Rtree >= 1, < 2',
  'scipy >= 1, < 2',
  'scikit-image >= 0.17, < 0.26',
  'SimpleITK >= 2, < 3',
  'trimesh >= 4, < 5',
]

[project.urls]
Repository = "https://github.com/AllenNeuralDynamics/aind-mri-utils/"
Issues = "https://github.com/AllenNeuralDynamics/aind-mri-utils/issues"
Changelog = "https://github.com/AllenNeuralDynamics/aind-mri-utils/blob/main/CHANGELOG.md"

[dependency-groups]
types = ["mypy", "types-openpyxl", "scipy-stubs", "pandas-stubs"]
dev = [{ include-group = "types" }, "codespell", "pytest", "pytest-cov", "ruff", "interrogate"]
jupyter = [{ include-group = "dev" }, "ipykernel", "pip"]

[tool.hatch.build.targets.wheel]
packages = ["src/aind_mri_utils"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["scratch"]

[tool.ruff.lint]
extend-select = ["Q", "RUF100", "C90", "I", "F", "E", "W", "D", "UP", "ANN", "PYI"]
extend-ignore = ["ANN401"]
per-file-ignores = { "tests/*.py" = ["ANN", "D"] }
mccabe = { max-complexity = 14 }
pydocstyle = { convention = "numpy" }

[tool.codespell]
skip = ".git,*.pdf,*.svg,./docs/build,uv.lock,scratch"
ignore-words-list = "nd"

[tool.pytest.ini_options]
addopts = "--strict-markers --tb=short --cov=src --cov-report=term-missing --cov-fail-under=0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
omit = ["*__init__*"]
source = ["src"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:", "# pragma: no cover"]
fail_under = 30

[tool.interrogate]
ignore-init-method = true
ignore-magic = true
ignore_module = true
fail-under = 30
exclude = [
  "__init__.py",
  "tests",
  "docs",
  "build",
  "examples",
  "site",
  "scratch",
  ".venv",
]

[tool.commitizen]
version_provider = "pep621"
version_files = ["src/aind_mri_utils/__init__.py:__version__"]
update_changelog_on_bump = true
tag_format = "v$version"
major_version_zero = true


[tool.mypy]
files = ["src/aind_mri_utils"]
exclude = ["scratch"]
# TODO: switch to strict = true once the remaining numpy/scipy-stubs and
# untyped-call warnings (currently masked by this explicit flag list)
# have been triaged.
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Libraries without type stubs.
[[tool.mypy.overrides]]
module = ["pywavefront.*", "mpl_toolkits.*"]
ignore_missing_imports = true
